# release-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  architecture.mmd  incidents.json  policy_config.yaml  pyproject.toml  sample_input.json
.github/workflows/: deploy.yml
dashboard/: app.py
src/release_agent/: __init__.py  agent.py  llm.py  logging_config.py  main.py  policy.py  schemas.py
src/release_agent/context/: __init__.py  ci.py  github.py  incidents.py
src/release_agent/evals/: __init__.py  adversarial.py  functional.py  judge.py  runner.py  semantic.py  storage.py
src/release_agent/prompts/: __init__.py  assess_risk.py
tests/: test_agent.py  test_api.py  test_context.py  test_policy.py  test_schemas.py
tests/fixtures/: gold_examples.json
