[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "release-agent"
version = "0.1.0"
description = "Release Risk & Quality Assessment Agent"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "openai>=1.12.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "tenacity>=8.2.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "respx>=0.21.0",
]
deploy = [
    "google-cloud-bigquery>=3.17.0",
    "google-cloud-logging>=3.9.0",
    "google-cloud-trace>=1.12.0",
]
dashboard = [
    "streamlit>=1.31.0",
    "plotly>=5.18.0",
    "pandas>=2.2.0",
]

[project.scripts]
release-agent = "release_agent.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/release_agent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests requiring external services",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
